// Vitest Snapshot v1

exports[`<Text /> > should match snapshot 1`] = `
.c0 {
  font-size: 2.4rem;
}

<div
  class="c0"
>
  Simple text
</div>
`;

exports[`<Text /> should match snapshot 1`] = `
.c0 {
  font-size: 1.5rem;
}

<div
  class="c0"
>
  Simple text
</div>
`;
